# CourseAttendance/DtoModel/ReqDtos/CourseReqQueryDto.cs
@@ -4,5 +4,9 @@ namespace CourseAttendance.DtoModel.ReqDtos
 {
 	public class CourseReqQueryDto : ReqQueryDto
 	{
+		/// <summary>
+		/// 学生
+		/// </summary>
+		public List<string> studentIds { get; set; } = [];
 	}
 }
