# api/swagger.json
@@ -1151,6 +1151,16 @@
         ],
         "parameters": [
           {
+            "name": "studentIds",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          },
+          {
             "name": "Page",
             "in": "query",
             "schema": {
